Allow loading SwiftShader after sandbox init on Mac

We could blacklist WebGL based on GL version, which is after creating a context.

Right now this will trigger a failure and GPU process will exit and then
relaunch with SwiftShader mode, which pre-load SwiftShader before sandbox init.

So users will not notice, but this GPU process exit and relaunch is less optimal
and unnecessary.

BUG=897914
TEST=manual
R=kerrnel@chromium.org,kbr@chromium.org,sugoi@chromium.org

Change-Id: Idcd018ca1f2e5161002cdae4563462c76316c606
Reviewed-on: https://chromium-review.googlesource.com/c/1297481
Reviewed-by: Alexis Hétu <sugoi@chromium.org>
Reviewed-by: Greg Kerr <kerrnel@chromium.org>
Reviewed-by: Robert Sesek <rsesek@chromium.org>
Commit-Queue: Zhenyao Mo <zmo@chromium.org>
Cr-Commit-Position: refs/heads/master@{#602391}
Former-commit-id: be9cde4790e7a70ea8b80503b83fdca1ea3f1b7f