content/test/gpu/gpu_tests/gpu_process_expectations.py
@@ -12,6 +12,3 @@ class GpuProcessExpectations(GpuTestExpectations):
 
     # Seems to have become flaky on Windows recently.
     self.Flaky('GpuProcess_one_extra_workaround', ['win'], bug=700522)
-
-    self.Fail('GpuProcess_feature_status_under_swiftshader',
-        ['mac'], bug=897914)
